--- a/opensprinkler/config.yaml
+++ b/opensprinkler/config.yaml
@@ -12,6 +12,7 @@ boot: auto
 ports:
   80/tcp: 5557
 map:
-  - addons_config: rw
+  - type: addon_config
+    read_only: False
 options: {}
 schema: {}
