--- a/opensprinkler/config.yaml
+++ b/opensprinkler/config.yaml
@@ -11,5 +11,9 @@ startup: services
 boot: auto
 ports:
   80/tcp: 5557
+map:
+  - type: addon_config
+    read_only: False
+    path: /config
 options: {}
 schema: {}
