add armv7 support

--- a/opensprinkler/config.yaml
+++ b/opensprinkler/config.yaml
@@ -3,7 +3,7 @@ name: OpenSprinkler
 description: Home Assistant add-on for OpenSprinkler using vampywiz17/opensprinkler image.
 url: https://github.com/vampywiz17/hassio-opensprinkler
 image: vampywiz17/opensprinkler
-arch: [ amd64, i386 ]
+arch: [ amd64, i386, armv7 ]
 
 version: 2.2.1.0
 slug: opensprinkler
