--- a/opensprinkler/config.yaml
+++ b/opensprinkler/config.yaml
@@ -3,19 +3,19 @@ name: OpenSprinkler
 description: Home Assistant add-on for OpenSprinkler using vampywiz17/opensprinkler image.
 url: https://github.com/vampywiz17/hassio-opensprinkler
 image: vampywiz17/opensprinkler
-arch: [ amd64, i386, armv7 ]
+arch: [ amd64, armv7 ]
 
-version: 2.2.1.0
+version: latest
 slug: opensprinkler
 startup: services
 boot: auto
 ports:
-  80/tcp: 5557
+  8080/tcp: 5557
 ports_description:
-  80/tcp: Web interface
+  8080/tcp: Web interface
 map:
   - type: addon_config
     read_only: False
-    path: /config
+    path: /data
 options: {}
 schema: {}
